--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Jorge Vega Martín</h1>
+<li>Videojuegos: <a href="https://jorge98vega.itch.io/">https://jorge98vega.itch.io/</a></li>
 </body>
 </html>
