--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
+
 <h1>Jorge Vega Martín</h1>
-<li>Videojuegos: <a href="https://jorge98vega.itch.io/">https://jorge98vega.itch.io/</a></li>
+
+<ul>
+  <li>Videojuegos: <a href="https://jorge98vega.itch.io/">https://jorge98vega.itch.io/</a></li>
+</ul>
+
 </body>
 </html>
