Add "Música" to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <ul>
   <li>Videojuegos: <a href="https://jorge98vega.itch.io/">https://jorge98vega.itch.io/</a></li>
+  <li>Música: <a href="https://youtube.com/playlist?list=PLmTqrzmZ0ad0NYgetYnhNfC-4HIH4w2-W">Covers</a></li>
 </ul>
 
 </body>
